--- a/package.json
+++ b/package.json
@@ -10,17 +10,9 @@
     "style": "sass --watch client/src/scss:client/src/css"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "cors": "^2.8.1",
     "express": "^4.16.2",
-    "express-jwt": "^5.1.0",
-    "jsonwebtoken": "^7.3.0",
-    "mongoose": "^4.9.0",
     "nodemon": "^1.17.5",
-    "passport": "^0.4.0",
-    "passport-twitter-token": "^1.3.0",
-    "react-twitter-auth": "^0.0.12",
-    "request": "2.81.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
