--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.2",
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
-    "react-materialize": "^2.3.3",
+    "react-bootstrap": "^0.32.1",
     "react-reveal": "^1.2.2"
   },
   "devDependencies": {
