--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "react-twitter-auth": "^0.0.12"
+    "react-twitter-auth": "^0.0.12",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
