--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
     "react-bootstrap": "^0.32.1",
+    "react-d3": "^0.4.0",
     "react-reveal": "^1.2.2",
     "superagent": "^3.8.3",
     "traverson": "^6.0.4",
